[package]
name = "wasm-dvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "=0.4.18"
pretty_env_logger = "0.5.0"
clap = { version = "4.4.18", features = ["derive"] }
nostr = "0.27.0"
nostr-sdk = "0.27.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
wasmtime = "17.0.0"
